# concord-bots

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE  PLAN-GIT-MONITOR.md  PLAN-SDK-0.3.1-UPGRADE.md  PLAN-V2-MIGRATION-SDK0.3.1.md  PLAN-V2-MIGRATION.md  PLAN.md  README.md  WALLET-DESIGN.md  concord-bots.service
config/: bot.toml.example  commands.toml.example
data/: community.sqlite  repos.sqlite  seed  wallet.redb  warnings.json
deploy/: Dockerfile  concord-bots.service  concord-bots.service.local  install.sh
examples/: diagnostic.rs  join_community.rs  leave_community.rs  set_profile.rs
examples/echo-bot/config/: bot.toml
examples/echo-bot/handlers/: commands.rs  scheduled.rs
src/: auth.rs  bot.rs  config.rs  main.rs  rate_limiter.rs
src/community/: mod.rs
src/git_monitor/: detect.rs  format.rs  github.rs  gitlab.rs  mod.rs  store.rs
src/handlers/: ai_bridge.rs  commands.rs  community_cmds.rs  fun.rs  git_cmds.rs  mod.rs  moderation_cmds.rs  nostr_cmds.rs  scheduled.rs  thread.rs  utility.rs  wallet_cmds.rs
src/lib/: http.rs  mod.rs  nip98.rs  npub_cash.rs  scheduler.rs  vector_client.rs
src/wallet/: mod.rs
