[package]
name = "concord-bots"
version = "2.0.0"
edition = "2021"
license = "MIT"
description = "A generic Vector/Concord Protocol bot template for AI agents"
repository = "https://github.com/CentauriAgent/concord-bots"
homepage = "https://github.com/CentauriAgent/concord-bots"
keywords = ["vector", "nostr", "bot", "concord", "messaging"]
categories = ["api-bindings", "network-programming"]

[dependencies]
vector_sdk = "0.5.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
once_cell = "1"

# Utility crates
chrono = "0.4"
chrono-tz = "0.10"
rand = "0.8"

# Cashu wallet
cdk = { version = "0.17.2-rc.2", default-features = false, features = ["wallet", "nostr"] }
cdk-redb = { version = "0.17.2-rc.2", default-features = false, features = ["wallet"] }
bip39 = "2"

# URL encoding for NIP-57 zap requests
urlencoding = "2"

# Nostr event signing (NIP-98 auth for npub.cash claim, kind 0 profile with lud16)
nostr-sdk = "0.44"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

# SQLite for community engagement system (XP, levels, giveaways, reputation)
rusqlite = { version = "0.37", features = ["bundled"] }

# Vendor OpenSSL to avoid system dependency during build
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = 2
lto = false
